LanguageParser.py
# Generated from Language.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LanguageParser ( Parser ):

    grammarFileName = "Language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "':'", "<INVALID>", "','", "'fn'", 
                     "'type'", "'until'", "'while'", "'for'", "'end'", "'match'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'true'", "'false'", "'use'", "'null'", "'|'", "'&'", 
                     "'^'", "'and'", "'or'", "'.'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'not'", "'='", "'is'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "SEMICOL", "COL", "DOTTEDID", "COMMA", 
                      "FUNCTION", "CLASS", "UNTIL", "WHILE", "FOR", "END", 
                      "MATCH", "BOOL", "DECIMAL", "INT", "EXPDECIMAL", "TRUE", 
                      "FALSE", "USE", "NULL", "BITOR", "BITAND", "BITXOR", 
                      "AND", "OR", "DOT", "EQ", "NEQ", "GT", "LT", "GTEQ", 
                      "LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", "NOT", 
                      "ASSIGN", "CONSTASSIGN", "OPAR", "CPAR", "OBRACE", 
                      "CBRACE", "OBRAK", "CBRAK", "STRING", "ID", "COMMENT", 
                      "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_expr = 2
    RULE_value = 3
    RULE_func_arg = 4
    RULE_assignment = 5

    ruleNames =  [ "prog", "stmt", "expr", "value", "func_arg", "assignment" ]

    EOF = Token.EOF
    SEMICOL=1
    COL=2
    DOTTEDID=3
    COMMA=4
    FUNCTION=5
    CLASS=6
    UNTIL=7
    WHILE=8
    FOR=9
    END=10
    MATCH=11
    BOOL=12
    DECIMAL=13
    INT=14
    EXPDECIMAL=15
    TRUE=16
    FALSE=17
    USE=18
    NULL=19
    BITOR=20
    BITAND=21
    BITXOR=22
    AND=23
    OR=24
    DOT=25
    EQ=26
    NEQ=27
    GT=28
    LT=29
    GTEQ=30
    LTEQ=31
    PLUS=32
    MINUS=33
    MULT=34
    DIV=35
    MOD=36
    NOT=37
    ASSIGN=38
    CONSTASSIGN=39
    OPAR=40
    CPAR=41
    OBRACE=42
    CBRACE=43
    OBRAK=44
    CBRAK=45
    STRING=46
    ID=47
    COMMENT=48
    NEWLINE=49
    WS=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.StmtContext)
            else:
                return self.getTypedRuleContext(LanguageParser.StmtContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = LanguageParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 12
                self.stmt()
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.BOOL) | (1 << LanguageParser.DECIMAL) | (1 << LanguageParser.INT) | (1 << LanguageParser.EXPDECIMAL) | (1 << LanguageParser.USE) | (1 << LanguageParser.NULL) | (1 << LanguageParser.NOT) | (1 << LanguageParser.OPAR) | (1 << LanguageParser.STRING) | (1 << LanguageParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LanguageParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(LanguageParser.ExprContext,0)

        def EOF(self):
            return self.getToken(LanguageParser.EOF, 0)
        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.NEWLINE)
            else:
                return self.getToken(LanguageParser.NEWLINE, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)


    class UseStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def USE(self):
            return self.getToken(LanguageParser.USE, 0)
        def DOTTEDID(self):
            return self.getToken(LanguageParser.DOTTEDID, 0)
        def ID(self):
            return self.getToken(LanguageParser.ID, 0)
        def EOF(self):
            return self.getToken(LanguageParser.EOF, 0)
        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.NEWLINE)
            else:
                return self.getToken(LanguageParser.NEWLINE, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseStmt" ):
                return visitor.visitUseStmt(self)
            else:
                return visitor.visitChildren(self)


    class AssignmentStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(LanguageParser.AssignmentContext,0)

        def EOF(self):
            return self.getToken(LanguageParser.EOF, 0)
        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.NEWLINE)
            else:
                return self.getToken(LanguageParser.NEWLINE, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStmt" ):
                return visitor.visitAssignmentStmt(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = LanguageParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = LanguageParser.ExprStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 17
                self.expr(0)
                self.state = 24
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LanguageParser.NEWLINE]:
                    self.state = 19 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 18
                            self.match(LanguageParser.NEWLINE)

                        else:
                            raise NoViableAltException(self)
                        self.state = 21 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                    pass
                elif token in [LanguageParser.EOF]:
                    self.state = 23
                    self.match(LanguageParser.EOF)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                localctx = LanguageParser.AssignmentStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.assignment()
                self.state = 33
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LanguageParser.NEWLINE]:
                    self.state = 28 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 27
                            self.match(LanguageParser.NEWLINE)

                        else:
                            raise NoViableAltException(self)
                        self.state = 30 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                    pass
                elif token in [LanguageParser.EOF]:
                    self.state = 32
                    self.match(LanguageParser.EOF)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                localctx = LanguageParser.UseStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.match(LanguageParser.USE)
                self.state = 36
                _la = self._input.LA(1)
                if not(_la==LanguageParser.DOTTEDID or _la==LanguageParser.ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 43
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LanguageParser.NEWLINE]:
                    self.state = 38 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 37
                            self.match(LanguageParser.NEWLINE)

                        else:
                            raise NoViableAltException(self)
                        self.state = 40 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                    pass
                elif token in [LanguageParser.EOF]:
                    self.state = 42
                    self.match(LanguageParser.EOF)
                    pass
                else:
                    raise NoViableAltException(self)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LanguageParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class BitwiseExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExprContext,i)

        def BITAND(self):
            return self.getToken(LanguageParser.BITAND, 0)
        def BITOR(self):
            return self.getToken(LanguageParser.BITOR, 0)
        def BITXOR(self):
            return self.getToken(LanguageParser.BITXOR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBitwiseExpr" ):
                return visitor.visitBitwiseExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPAR(self):
            return self.getToken(LanguageParser.OPAR, 0)
        def expr(self):
            return self.getTypedRuleContext(LanguageParser.ExprContext,0)

        def CPAR(self):
            return self.getToken(LanguageParser.CPAR, 0)
        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.NEWLINE)
            else:
                return self.getToken(LanguageParser.NEWLINE, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParExpr" ):
                return visitor.visitParExpr(self)
            else:
                return visitor.visitChildren(self)


    class ListAccessContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExprContext,i)

        def OBRAK(self):
            return self.getToken(LanguageParser.OBRAK, 0)
        def CBRAK(self):
            return self.getToken(LanguageParser.CBRAK, 0)
        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.NEWLINE)
            else:
                return self.getToken(LanguageParser.NEWLINE, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAccess" ):
                return visitor.visitListAccess(self)
            else:
                return visitor.visitChildren(self)


    class ValueExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self):
            return self.getTypedRuleContext(LanguageParser.ValueContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueExpr" ):
                return visitor.visitValueExpr(self)
            else:
                return visitor.visitChildren(self)


    class AddExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(LanguageParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(LanguageParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddExpr" ):
                return visitor.visitAddExpr(self)
            else:
                return visitor.visitChildren(self)


    class UnotExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(LanguageParser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(LanguageParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnotExpr" ):
                return visitor.visitUnotExpr(self)
            else:
                return visitor.visitChildren(self)


    class UminusExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OPAR(self):
            return self.getToken(LanguageParser.OPAR, 0)
        def MINUS(self):
            return self.getToken(LanguageParser.MINUS, 0)
        def expr(self):
            return self.getTypedRuleContext(LanguageParser.ExprContext,0)

        def CPAR(self):
            return self.getToken(LanguageParser.CPAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUminusExpr" ):
                return visitor.visitUminusExpr(self)
            else:
                return visitor.visitChildren(self)


    class RelatExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExprContext,i)

        def EQ(self):
            return self.getToken(LanguageParser.EQ, 0)
        def NEQ(self):
            return self.getToken(LanguageParser.NEQ, 0)
        def LT(self):
            return self.getToken(LanguageParser.LT, 0)
        def GT(self):
            return self.getToken(LanguageParser.GT, 0)
        def LTEQ(self):
            return self.getToken(LanguageParser.LTEQ, 0)
        def GTEQ(self):
            return self.getToken(LanguageParser.GTEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelatExpr" ):
                return visitor.visitRelatExpr(self)
            else:
                return visitor.visitChildren(self)


    class MultExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExprContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExprContext,i)

        def MULT(self):
            return self.getToken(LanguageParser.MULT, 0)
        def DIV(self):
            return self.getToken(LanguageParser.DIV, 0)
        def MOD(self):
            return self.getToken(LanguageParser.MOD, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultExpr" ):
                return visitor.visitMultExpr(self)
            else:
                return visitor.visitChildren(self)


    class IdExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)
        def func_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.Func_argContext)
            else:
                return self.getTypedRuleContext(LanguageParser.Func_argContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.COMMA)
            else:
                return self.getToken(LanguageParser.COMMA, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdExpr" ):
                return visitor.visitIdExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LanguageParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = LanguageParser.IdExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 48
                self.match(LanguageParser.ID)
                self.state = 57
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 49
                    self.func_arg()
                    self.state = 54
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 50
                            self.match(LanguageParser.COMMA)
                            self.state = 51
                            self.func_arg() 
                        self.state = 56
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,8,self._ctx)



                pass

            elif la_ == 2:
                localctx = LanguageParser.UminusExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 59
                self.match(LanguageParser.OPAR)
                self.state = 60
                self.match(LanguageParser.MINUS)
                self.state = 61
                self.expr(0)
                self.state = 62
                self.match(LanguageParser.CPAR)
                pass

            elif la_ == 3:
                localctx = LanguageParser.UnotExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 64
                self.match(LanguageParser.NOT)
                self.state = 65
                self.expr(7)
                pass

            elif la_ == 4:
                localctx = LanguageParser.ParExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 66
                self.match(LanguageParser.OPAR)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LanguageParser.NEWLINE:
                    self.state = 67
                    self.match(LanguageParser.NEWLINE)
                    self.state = 72
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 73
                self.expr(0)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LanguageParser.NEWLINE:
                    self.state = 74
                    self.match(LanguageParser.NEWLINE)
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 80
                self.match(LanguageParser.CPAR)
                pass

            elif la_ == 5:
                localctx = LanguageParser.ValueExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 82
                self.value()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 114
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                    if la_ == 1:
                        localctx = LanguageParser.MultExprContext(self, LanguageParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 85
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 86
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.MULT) | (1 << LanguageParser.DIV) | (1 << LanguageParser.MOD))) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 87
                        localctx.right = self.expr(7)
                        pass

                    elif la_ == 2:
                        localctx = LanguageParser.AddExprContext(self, LanguageParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 88
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 89
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==LanguageParser.PLUS or _la==LanguageParser.MINUS):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 90
                        localctx.right = self.expr(6)
                        pass

                    elif la_ == 3:
                        localctx = LanguageParser.RelatExprContext(self, LanguageParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 91
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 92
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.EQ) | (1 << LanguageParser.NEQ) | (1 << LanguageParser.GT) | (1 << LanguageParser.LT) | (1 << LanguageParser.GTEQ) | (1 << LanguageParser.LTEQ))) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 93
                        localctx.right = self.expr(5)
                        pass

                    elif la_ == 4:
                        localctx = LanguageParser.BitwiseExprContext(self, LanguageParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 94
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 95
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.BITOR) | (1 << LanguageParser.BITAND) | (1 << LanguageParser.BITXOR))) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 96
                        localctx.right = self.expr(4)
                        pass

                    elif la_ == 5:
                        localctx = LanguageParser.ListAccessContext(self, LanguageParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 97
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 98
                        self.match(LanguageParser.OBRAK)
                        self.state = 102
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==LanguageParser.NEWLINE:
                            self.state = 99
                            self.match(LanguageParser.NEWLINE)
                            self.state = 104
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 105
                        self.expr(0)
                        self.state = 109
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==LanguageParser.NEWLINE:
                            self.state = 106
                            self.match(LanguageParser.NEWLINE)
                            self.state = 111
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)

                        self.state = 112
                        self.match(LanguageParser.CBRAK)
                        pass

             
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LanguageParser.RULE_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IntAtomContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(LanguageParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntAtom" ):
                return visitor.visitIntAtom(self)
            else:
                return visitor.visitChildren(self)


    class StringAtomContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(LanguageParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringAtom" ):
                return visitor.visitStringAtom(self)
            else:
                return visitor.visitChildren(self)


    class BoolAtomContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(LanguageParser.BOOL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolAtom" ):
                return visitor.visitBoolAtom(self)
            else:
                return visitor.visitChildren(self)


    class ExpnumberAtomContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EXPDECIMAL(self):
            return self.getToken(LanguageParser.EXPDECIMAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpnumberAtom" ):
                return visitor.visitExpnumberAtom(self)
            else:
                return visitor.visitChildren(self)


    class NumberAtomContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)
